--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@100;200;500;700;800;900&display=swap"
     rel="stylesheet">
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -26,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Frontend Mentor | Intro section with dropdown navigation</title>
 </head>
 
 <body>
